version 0.31 ?

* Buffer for FORM_STRING value to be allocated on-demand
   and dynamically and not to be limited to 256 bytes as before.

* Bug fixed, that responses logged using LOG_RESP_BODIES=1
   or LOG_RESP_HEADERS=1 went to the subdirectory of the previous
   url, when an empty/current url was used, e.g. on POST after GET.
   Responses logging to files functionality separated to a dedicated function
   set_response_logfile (struct client_context* cctx, struct url_context* url)
   The function is called also from the code, where current url obtained by 
   prev GET is prepared for POST-ing of credentials.
  

version 0.31 - released 31/05/2007, svn 399

* Tag TIMER_URL_COMPLETION is a rename of UAS_URL_MAX_TIME
    now comes in milliseconds and enforced. When a value of the tag is
   above 0, we are monitoring the url-fetching and cancelling it, if above
   the specified milliseconds.
   The results are presented on the Load Status GUI as the operation Timeouted
   statistics and is reflected in files as T-Err number.
   When a url fetch is cancelled on the url-completion timeout, the number of Failed
   operations also increases.

* Added an option to log response body-bytes and headers to 
   files. To log body bytes add tag LOG_RESP_BODIES=1 to your
   configuration file. To log headers add LOG_RESP_HEADERS=1.
   See log_hdr_body.conf as an example.

   Directory <batch-name> is created with subdirs url0, url1, url<n>
   Each url subdir contains files named
   cl-<client-num>-cycle-<cycle-num>.body or
   cl-<client-num>-cycle-<cycle-num>.hdr respectively.

   Note, that output to file is currenly done in a most simple way
   and seriously impacts performance. Use it only with a small number
   of clients and for a few cycles.

* Added statistics for 1xx HTTP responses (100 and 101).
	
* Authentication (web and proxy) re-worked to make authentication
   method configurable using tags WEB_AUTH_METHOD and
   PROXY_AUTH_METHOD. Credentials may be specified by